# tinyarg

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: tinyarg.c  tinyarg.h
tests/: tinyarg_test.c
